<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dof_activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="411dp"
        android:layout_height="57dp"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#009688"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="60dp"
        android:text="@string/near_focal_point"
        android:textColor="#0A0101"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="201dp"
        android:text="@string/far_focal_point"
        android:textColor="#0A0101"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="107dp"
        android:text="@string/depth_of_field"
        android:textColor="#0A0101"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="154dp"
        android:text="@string/hyperfocal_distance"
        android:textColor="#0A0101"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewmiddle"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="249dp"
        android:text="TextView"
        android:textColor="#009688"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom11"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="296dp"
        android:text="@string/circle_of_confusion_m"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom21"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="342dp"
        android:text="@string/distance_to_subject_m"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom31"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="389dp"
        android:text="@string/selected_aperature"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bottom12"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_marginStart="245dp"
        android:layout_marginTop="296dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_0_029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bottom22"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_marginStart="245dp"
        android:layout_marginTop="341dp"
        android:ems="10"
        android:hint="@string/ex_1_5_for_1_5m"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bottom32"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_marginStart="246dp"
        android:layout_marginTop="388dp"
        android:ems="10"
        android:hint="ex: 2.8 for F2.8"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bottomlast"
        android:layout_width="182dp"
        android:layout_height="61dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="508dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:layout_marginStart="246dp"
        android:layout_marginTop="58dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:layout_marginStart="246dp"
        android:layout_marginTop="107dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="166dp"
        android:layout_height="45dp"
        android:layout_marginStart="245dp"
        android:layout_marginTop="156dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="166dp"
        android:layout_height="46dp"
        android:layout_marginStart="245dp"
        android:layout_marginTop="201dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>